@@ -1,3 +1,8 @@
+2007-07-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_open_lib.c: Per suggestion from Janne, ensure
+	pj_set_searchpath(0,NULL) clears the search path cleanly.
+
 2007-06-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/proj.c: pj_free() the definition to simplify leak testing.
